vlib/v/checker/tests/selector_expr_opt_map_get_err.vv
struct Abc {
mut:
	m ?map[string]string
}

fn main() {
	x := Abc{}
	_ := x.m['test'] or { 'test' }
}
